@@ -40,9 +40,11 @@ The module requires the libwww-perl-5.60 package written by Gisle Aas
 <gisle@ActiveState.com> v5.53 or above. This package can be obtained
 via CPAN at http://search.cpan.org/search?dist=libwww-perl
 
-Also required is the Net::Domain module, v2.13 or above, by Graham Barr
-<gbarr@pobox.com>. This module has been included in the base distribution
-since Perl 5.7.2, but otherwise can be downloaded from CPAN as part of the libnet package, see http://search.cpan.org/search?dist=libnet
+Also required is the Net::Domain module, v2.13 or above, by Graham
+Barr <gbarr@pobox.com>. This module has been included in the base
+distribution since Perl 5.7.2, but otherwise can be downloaded from
+CPAN as part of the libnet package, see
+http://search.cpan.org/search?dist=libnet
 
 Finally the package requires Pod::Usage, v1.14 or above, by Brad Appleton 
 <bradapp@enteract.com>. Again this has been included in the base distribution
@@ -61,7 +63,7 @@ The package provides the following classes
 along with the following scripts which take advantage of the class 
 functionality
 
-    adsquery.pl
+    adsquery
 
 Where can I get it?
 -------------------------
